Fixing compilation erorr